<?xml version="1.0" encoding="utf-8"?>
<!--   Parent Layout With Vertical Orientation -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!--Rows of Domino Buttons-->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="10">
            android:weightSum="10">

            <Button android:id="@+id/domino_zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domino_zero"
                android:layout_centerHorizontal="true"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="10">

            <Button android:id="@+id/domino_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domino_one"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domino_two"
                android:onClick="addSubTotal"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domino_three"
                android:onClick="addSubTotal"
                android:layout_centerHorizontal="true"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="10">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domino_four"
                android:onClick="addSubTotal"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domino_five"
                android:onClick="addSubTotal"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domino_six"
                android:onClick="addSubTotal"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="10">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domino_seven"
                android:onClick="addSubTotal"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domino_eight"
                android:onClick="addSubTotal"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domino_nine"
                android:onClick="addSubTotal"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="10">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domino_ten"
                android:onClick="addSubTotal"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domino_eleven"
                android:onClick="addSubTotal"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/domino_twelve"
            android:onClick="addSubTotal"/>

        </TableRow>

    </LinearLayout>

    <!--Sub totals-->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView android:id="@+id/sub_domino_left"
                  android:layout_weight="1"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"/>
        <TextView android:id="@+id/sub_domino_right"
                  android:layout_weight="1"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"/>
    </LinearLayout>

    <!--Enter Button-->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:onClick="updateTotal"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:onClick="showTotal"/>

    </LinearLayout>




</LinearLayout>

